css/styles.css
/* ... */
.group:focus-visible .group-focus-visible\:bg-slate-200 {
  --tw-bg-opacity: 1;
  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
}

.group:focus-visible .group-focus-visible\:bg-slate-300 {
  --tw-bg-opacity: 1;
  background-color: rgb(203 213 225 / var(--tw-bg-opacity));
}

.group:focus-visible .group-focus-visible\:text-slate-200 {
  --tw-text-opacity: 1;
  color: rgb(226 232 240 / var(--tw-text-opacity));
}

.group:focus-visible .group-focus-visible\:text-slate-300 {
  --tw-text-opacity: 1;
  color: rgb(203 213 225 / var(--tw-text-opacity));
}

@media (prefers-reduced-motion: reduce) {
  .motion-reduce\:transition-none {
    transition-property: none;
  }
}

@media (min-width: 480px) {
  .sm\:col-span-6 {
    grid-column: span 6 / span 6;
  }

  .sm\:col-span-5 {
    grid-column: span 5 / span 5;
  }

  .sm\:w-1\/4 {
    width: 25%;
  }

  .sm\:w-1\/2 {
    width: 50%;
  }

  .sm\:w-1\/3 {
    width: 33.333333%;
  }

  .sm\:w-1\/5 {
    width: 20%;
  }

  .sm\:w-full {
    width: 100%;
  }

  .sm\:grid-cols-8 {
    grid-template-columns: repeat(8, minmax(0, 1fr));
  }

  .sm\:gap-4 {
    gap: 1rem;
  }

  .sm\:gap-8 {
    gap: 2rem;
  }

  .sm\:text-5xl {
    font-size: 3rem;
    line-height: 1;
  }

  .sm\:text-xl {
    font-size: 1.25rem;
    line-height: 1.75rem;
  }

  .sm\:text-2xl {
    font-size: 1.5rem;
    line-height: 2rem;
  }

  .sm\:text-base {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 768px) {
  @media (min-width: 480px) {
    .md\:sm\:gap-8 {
      gap: 2rem;
    }
  }

  .md\:col-span-7 {
    grid-column: span 7 / span 7;
  }

  .md\:col-span-10 {
    grid-column: span 10 / span 10;
  }

  .md\:col-span-8 {
    grid-column: span 8 / span 8;
  }

  .md\:col-span-5 {
    grid-column: span 5 / span 5;
  }

  .md\:col-span-3 {
    grid-column: span 3 / span 3;
  }

  .md\:-mx-12 {
    margin-left: -3rem;
    margin-right: -3rem;
  }

  .md\:w-1\/2 {
    width: 50%;
  }

  .md\:w-1\/4 {
    width: 25%;
  }

  .md\:w-1\/3 {
    width: 33.333333%;
  }

  .md\:w-2\/3 {
    width: 66.666667%;
  }

  .md\:w-2\/5 {
    width: 40%;
  }

  .md\:w-3\/5 {
    width: 60%;
  }

  .md\:w-1\/5 {
    width: 20%;
  }

  .md\:w-4\/5 {
    width: 80%;
  }

  .md\:w-auto {
    width: auto;
  }

  .md\:w-1 {
    width: 0.25rem;
  }

  .md\:w-\[100px\] {
    width: 100px;
  }

  .md\:w-\[300px\] {
    width: 300px;
  }

  .md\:w-min {
    width: -moz-min-content;
    width: min-content;
  }

  .md\:flex-row {
    flex-direction: row;
  }

  .md\:flex-wrap {
    flex-wrap: wrap;
  }

  .md\:gap-4 {
    gap: 1rem;
  }

  .md\:gap-2 {
    gap: 0.5rem;
  }

  .md\:gap-1 {
    gap: 0.25rem;
  }

  .md\:px-12 {
    padding-left: 3rem;
    padding-right: 3rem;
  }

  .md\:py-20 {
    padding-top: 5rem;
    padding-bottom: 5rem;
  }

  .md\:pr-5 {
    padding-right: 1.25rem;
  }
}

@media (min-width: 480px) {
  @media (min-width: 1024px) {
    .sm\:lg\:hover\:\!opacity-100:hover {
      opacity: 1 !important;
    }
  }
}

@media (min-width: 768px) {
  @media (min-width: 1024px) {
    .md\:lg\:opacity-0 {
      opacity: 0;
    }

    .md\:lg\:w-1\/2 {
      width: 50%;
    }
  }
}
/* ... */

